# pytterns

./: .gitignore  LICENSE  pyproject.toml  readme.md  run.py
src/get_pytterns.egg-info/: PKG-INFO  SOURCES.txt
src/py_tterns.egg-info/: PKG-INFO  SOURCES.txt
src/pytterns/: __init__.py  pytterns.py
src/pytterns/patterns/: cube.py  panel.py  progress.py  pyramid.py  rain.py  rectangle.py  reg_square.py  square.py  triangle.py  typewrite.py
